# vlm

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  vlm_training_pipeline.ipynb
vlm_train/: basic_inference.py  inference.py  language_model.py  lm_train.py  q_former_train.py  results.csv  test_generation.py  vit_model.py
vlm_train/dataset/: cc_dataloader.py  cui_mapping.csv  lm_dataloader.py  roco_dataloader.py  test_captions.csv  test_concepts_manual.csv  train_concepts_manual.csv
vlm_train/networks/: lm_to_vlm.py  q_former.py
vlm_train/utils/: calculate_recall.py  filter_dataset.py  utils.py
