[project]
name = "vllms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerator>=2025.11.11",
    "datasets>=4.4.1",
    "img2dataset>=1.47.0",
    "peft>=0.18.0",
    "rich>=14.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
